# baml-pdf-parsing

./: .gitignore  README.md  img_results.csv  main.py  pdf_results.csv  play.ipynb  pyproject.toml
baml_client/: async_client.py  inlinedbaml.py  parser.py  stream_types.py  sync_client.py  type_builder.py  type_map.py  types.py
baml_src/: clients.baml  pdf-parser.baml
